<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/Layoutscomens"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/canvas"
                style="@style/comunTextsViews"
                android:gravity="center"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/mylogo2"
                style="@style/LogoView"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView6"
                style="@style/sotialText"
                android:text="@string/select" />

            <Button
                android:id="@+id/selc1"
                style="@style/comunButtons"
                android:onClick="bmi"
                android:text="@string/selection_1" />

            <Button
                android:id="@+id/sel2"
                style="@style/comunButtons"
                android:onClick="wtr"
                android:text="@string/selection_2" />

            <Button
                android:id="@+id/sel3"
                style="@style/comunButtons"
                android:onClick="hbt"
                android:text="@string/selection_3" />

            <Button
                android:id="@+id/sel4"
                style="@style/comunButtons"
                android:onClick="bmrx"
                android:text="@string/CalorieCalculator" />

            <Space
                android:layout_width="16dp"
                android:layout_height="32dp" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>