<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Calories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk01"
    android:backgroundTint="@color/cardview_dark_background"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    tools:context=".BMR">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/CalorieCalculator"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/BMRageTex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/BMRage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/age_hint"
                    android:inputType="numberDecimal"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/BMRweightTex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Weight" />

                <EditText
                    android:id="@+id/BMRweight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/weight_hint"
                    android:inputType="numberDecimal"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/BMRheightTex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height" />

                <EditText
                    android:id="@+id/BMRheight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/height_hint"
                    android:inputType="numberDecimal"
                    tools:ignore="TouchTargetSizeCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <Space
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender" />

                <RadioGroup
                    android:id="@+id/BMRsexGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/malebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checksex"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/femaleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checksex"
                        android:text="@string/female" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <Space
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity" />

                <RadioGroup
                    android:id="@+id/BMRactivityGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/BMRsedntary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="checkActivity"
                        android:text="@string/Sedentary" />

                    <RadioButton
                        android:id="@+id/BMRlightAct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="checkActivity"
                        android:text="@string/light" />

                    <RadioButton
                        android:id="@+id/BMRmod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checkActivity"
                        android:text="@string/moderate" />

                    <RadioButton
                        android:id="@+id/BMRactiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checkActivity"
                        android:text="@string/active" />

                    <RadioButton
                        android:id="@+id/BMRvaryActiv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checkActivity"
                        android:text="@string/varyActive" />

                </RadioGroup>
            </TableRow>

            <Button
                android:id="@+id/BMRcalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="BMRcalcolation"
                android:text="@string/Calculate" />

            <TextView
                android:id="@+id/BMRtv"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>