<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wlayout"
    style="@style/Layoutscomens"
    android:orientation="vertical"
    tools:context=".water">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/watertoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/selection_2"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            style="@style/TextofTextView"
            android:text="@string/Weight" />

        <EditText
            android:id="@+id/W_bodyweight"
            style="@style/EditTextStyle"
            android:ems="10"
            android:hint="@string/weight_hint" />
    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size" />

    <Button
        android:id="@+id/W_calculate"
        style="@style/comunButtons"
        android:onClick="watercalculation"
        android:text="@string/Calculate"
        android:background="@drawable/custom_buttom"/>

    <TextView
        android:id="@+id/WTRtv"
        android:layout_height="@dimen/RsultTextHeght"
        style="@style/TextforRsults"
        android:layout_margin="5dp" />
    <TextView
        android:id="@+id/WTRtv2"
        android:layout_height="@dimen/RsultTextHeght"
        style="@style/TextforRsults"
        android:layout_margin="5dp" />
</LinearLayout>
</ScrollView>